updated documentation for #950